--- a/package.json
+++ b/package.json
@@ -4,15 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "next",
+    "build": "next build",
+    "prod": "next start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^2.1.2",
+    "@zeit/next-sass": "^1.0.1",
+    "autoprefixer": "^9.7.6",
     "axios": "^0.19.2",
     "next": "^9.3.5",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "sass": "^1.26.3",
+    "tailwindcss": "^1.2.0"
   }
 }
