--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@zeit/next-sass": "^1.0.1",
     "autoprefixer": "^9.7.6",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "next": "^9.3.5",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
