--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@mdx-js/loader": "^1.5.8",
     "@next/mdx": "^9.3.5",
     "@zeit/next-sass": "^1.0.1",
+    "algoliasearch": "^4.8.1",
     "autoprefixer": "^9.7.6",
     "axios": "^0.19.2",
+    "babel-eslint": "^10.1.0",
     "classnames": "^2.2.6",
+    "lodash": "^4.17.20",
     "next": "^9.3.5",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
@@ -26,5 +29,13 @@
     "react-dom": "^16.13.1",
     "sass": "^1.26.3",
     "tailwindcss": "^1.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.0.0"
   }
 }
