--- a/package.json
+++ b/package.json
@@ -12,21 +12,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@fullhuman/postcss-purgecss": "^2.1.2",
     "@mdx-js/loader": "^1.5.8",
     "@next/mdx": "^9.3.5",
-    "@zeit/next-sass": "^1.0.1",
     "algoliasearch": "^4.8.1",
     "autoprefixer": "^9.7.6",
     "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.20",
-    "next": "^9.3.5",
+    "next": "^10.0.7",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "sass": "^1.26.3",
     "tailwindcss": "^1.2.0"
   },
