--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss-loader": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-highlight-words": "^0.17.0",
     "sass": "^1.26.3",
     "tailwindcss": "^1.2.0"
   },
