--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
     "classnames": "^2.2.6",
+    "isomorphic-fetch": "^3.0.0",
     "lodash": "^4.17.20",
     "next": "^10.0.7",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-highlight-words": "^0.17.0",
