--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@mdx-js/loader": "^1.5.8",
     "@next/mdx": "^9.3.5",
     "algoliasearch": "^4.8.1",
-    "autoprefixer": "^9.7.6",
-    "axios": "^0.19.2",
+    "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
     "classnames": "^2.2.6",
     "isomorphic-fetch": "^3.0.0",
     "lodash": "^4.17.20",
     "next": "^10.0.7",
+    "postcss": "^8.2.8",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "query-string": "^6.14.1",
@@ -35,7 +35,7 @@
     "react-dom": "^17.0.1",
     "react-highlight-words": "^0.17.0",
     "sass": "^1.26.3",
-    "tailwindcss": "^1.2.0"
+    "tailwindcss": "^2.0.4"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
