--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "@next/mdx": "^9.5.5",
     "algoliasearch": "^4.8.1",
     "autoprefixer": "^10.2.5",
+    "axios": "^0.21.4",
     "babel-eslint": "^10.1.0",
     "classnames": "^2.2.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "isomorphic-fetch": "^3.0.0",
     "lodash": "^4.17.20",
     "next": "^11.1.2",
+    "oauth-1.0a": "^2.2.6",
     "postcss": "^8.2.8",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
@@ -38,7 +42,9 @@
     "react-dom": "^17.0.1",
     "react-highlight-words": "^0.17.0",
     "sass": "^1.26.3",
-    "tailwindcss": "^2.0.4"
+    "tailwindcss": "^2.0.4",
+    "twitter": "^1.7.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^11.1.2",
