--- a/package.json
+++ b/package.json
@@ -21,21 +21,23 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@fullhuman/postcss-purgecss": "^2.1.2",
-    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/loader": "^2.1.5",
+    "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^9.5.5",
+    "@vercel/og": "^0.0.20",
     "algoliasearch": "^4.8.1",
     "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
     "classnames": "^2.2.6",
     "isomorphic-fetch": "^3.0.0",
     "lodash": "^4.17.20",
-    "next": "^11.1.2",
+    "next": "^13.0.2",
     "postcss": "^8.2.8",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "query-string": "^6.14.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-highlight-words": "^0.17.0",
     "sass": "^1.26.3",
     "tailwindcss": "^2.0.4"
@@ -47,6 +49,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.0.0"
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "typescript": "4.8.4"
   }
 }
