--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "prod": "next start"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
