--- a/sdk/package.json
+++ b/sdk/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "build": "npx tsc src/index.ts",
+    "build": "npx tsc --build tsconfig.sdk.json",
     "start": "npx ts-node-esm src/index.ts",
     "start:watch": "npx nodemon src/index.ts",
     "test": "npx ts-mocha test/*.ts",
