--- a/sdk/tsconfig.sdk.json
+++ b/sdk/tsconfig.sdk.json
@@ -1,18 +1,22 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "NodeNext",
+    "baseUrl": "./",
+    "lib": [
+      "ES2021.String",
+      "ES2022"
+    ],
+    "target": "ES2022",
+    "module": "ES2022",
     "outDir": "dist",
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
-    "noEmit": true,
-    "allowImportingTsExtensions": true,
     "resolveJsonModule": true
   },
   "ts-node": {
     "esm": true
   },
+  "include": ["./src/index.ts"],
   "exclude": ["node_modules", "./test/**/*.ts"]
 }
