--- a/sdk/tsconfig.sdk.json
+++ b/sdk/tsconfig.sdk.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": "./",
+    "declaration": true,
     "lib": [
       "ES2021.String",
       "ES2022"
@@ -17,6 +18,6 @@
   "ts-node": {
     "esm": true
   },
-  "include": ["./src/index.ts"],
+  "include": ["./index.ts", "./package.json"],
   "exclude": ["node_modules", "./test/**/*.ts"]
 }
